# Paper_Reproduction

./: GITHUB_DESCRIPTION.md  README.md  analysis_curve_pattern.py  analysis_nonlinear_ceiling.py  analysis_nonlinear_reverse_engineer.py  analysis_reverse_engineer_paper.py  pyproject.toml  reproduction_report.md
.claude/: settings.local.json
docs/: CHECKPOINT_2026_01_30.md  CHECKPOINT_2026_01_30_v2.md  CONCEPTUAL_UNDERSTANDING.md  REPRODUCTION_RESULTS.md  reproducibility_analysis_and_plan.md
experiments/: __init__.py  figure2_ceiling_comparison.py  figure2_comprehensive.py  run_all.py  synthetic_linearly_separable.py  synthetic_nonlinear.py  validation_experiments.py
src/: __init__.py  category_influence.py  ekfac.py  ga_search.py  influence.py  lp_reweight.py  lp_reweight_fixed.py  pareto.py  pareto_lp_ga.py
