[project]
name = "paper-reproduction"
version = "0.1.0"
description = "Reproduction of 'What Is The Performance Ceiling of My Classifier?' paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
